--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,8 @@
 <div class="side-bar-header">
-
+  <div class="user-name">"ユーザー名"
+  </div>
+  <a class="new-room">"チャットを作成する"
+  </a>
 </div>
 
 <div class="rooms">
