--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="side-bar-header">
-  <div class="hesder-name">
+  <div class="header-name">
   <a href="#">ユーザー名</a>
   </div>
   <div class="create-room">
