--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,6 +1,6 @@
 <div class="chat-header">
-  
   <div class="left-header">
+    <div class="header-title">グループ名</div>
   </div>
   <div class="right-header">
     <div class="header-button">
