--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -10,25 +10,7 @@
 </div>
 
 <div class="messages">
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">name</div>
-      <div class="message-date">time</div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">message</div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">name</div>
-      <div class="message-date">time</div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">message</div>
-    </div>
-  </div>
+<%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
